@@ -1,3 +1,8 @@
+2008-09-25  kitone  <kitone@gna.org>
+
+	* POTFILES.in:
+	Update with new files.
+
 2008-09-21  kitone  <kitone@gna.org>
 
 	* fr.po:
